<resources>
<!-- текст на страницах   -->
    <string name="app_name">Название вашего приложения</string>
    <string name="welcome_message">Добро пожаловать!!!</string>
    <string name="activity2_text">Это Activity 2</string>
    <string name="activity3_text">Это Activity 3</string>
    <string name="activity4_text">(Activity 4) Рецепты по категориям</string>
    <string name="activity5_text">Это Activity 5</string>

    <!-- текст на кнопках   -->

<!-- activity4.xml (Меню рецептов)  -->
<!-- activity4_1.xml (Супы)   -->
    <string name="button_activity2_text">IT (Activity 2)</string>
    <string name="button_activity3_text">Activity 3</string>
    <string name="button_activity4_text">Рецепты</string>
    <string name="button_activity5_text">Activity 5</string>
    <string name="button_activity4_1_text">Соусы</string>
    <string name="button_activity4_2_text">Рыба</string>
    <string name="button_activity4_3_text">Мясо</string>
    <string name="button_activity4_4_text">Заготовки на зиму</string>

<!-- Текст в activity4_1.xml   -->

    <string name="your_large_text_with_recipe"><![CDATA[
     <h1>Майонез</h1>


    <h2>С горчицей и лимонным соком:</h2>
    <h3>Ингредиенты:</h3>
    <ol>

      <li> 2 сырых яйца;</li>
      <li>½ чайной ложки соли;</li>
      <li>½ чайной ложки сахара;</li>
      <li>2 чайные ложки горчицы;</li>
      <li>250 мл растительного масла;</li>
      <li>1 столовая ложка лимонного сока.</li>

    </ol>

    <h3>Приготовление:</h3>

    <b> Разбейте целые яйца в высокую и не слишком широкую ёмкость,<br>
      например в банку или в специальный стакан для блендера.<br>
      Делайте это аккуратно, чтобы желтки не растеклись.<br>
      Добавьте соль, сахар и горчицу.<br>

      Опустите блендер на дно и взбейте смесь до однородной консистенции.<br>
      Затем, двигая блендером вверх‑вниз и продолжая
      взбивать массу, тонкой струйкой вливайте масло.<br>
      Когда соус загустеет, добавьте лимонный сок и взбейте майонез блендером ещё раз.</b>

    <h2> С уксусом:</h2>

    <h3> Ингредиенты:</h3>
    <ol>
      <li> 2 сырых яичных желтка;</li>
      <li> ½ чайной ложки соли;</li>
      <li> ½ чайной ложки сахара;</li>
      <li>½ чайной ложки уксуса 9%;</li>
      <li>150 мл растительного масла.</li>
    </ol>

    <h3>Приготовление: </h3>

    <b> Выложите желтки в высокую узкую ёмкость.<br>
      Добавьте соль, сахар и уксус..<br>
      Вместо столового уксуса можно использовать
      яблочный, тогда майонез будет понежнее..<br>

      Влейте масло и, поместив блендер на дно ёмкости и не двигая его, взбивайте массу около 3 минут..<br>
      Когда соус начнёт
      густеть, начинайте двигать блендером вверх‑вниз, чтобы ингредиенты перемешались равномерно.</b>
      <hr>
      <hr>

    <h2>Без яиц:</h2>

    <h3> Ингредиенты:</h3>
    <ol>
      <li></li>150 мл молока любой жирности;
      <li></li>300 мл растительного масла;
      <li></li>2–3 чайные ложки горчицы;
      <li></li>2 столовые ложки лимонного сока;
      <li></li>½ чайной ложки соли.
    </ol>

    <h3> Приготовление: </h3>

    <b>В высокую узкую ёмкость влейте молоко и масло.<br>
      Взбейте смесь погружным блендером в течение нескольких секунд.<br>
      У вас должна получиться густая масса.<br>
      Добавьте горчицу, лимонный сок и соль и взбейте ещё раз до однородной консистенции.</b>


    <h2> Сметана и варенные яица:</h2>

    <h3>Ингредиенты:</h3>


    <ol>
      <li>3 варёных желтка; </li>
      <li>2 чайные ложки горчицы; </li>
      <li>300 г жирной сметаны; </li>
      <li>½ чайной ложки соли. </li>

    </ol>

    <h3> Приготовление:</h3>

    <b>Добавьте к желткам горчицу и разотрите вилкой до однородной консистенции.<br>
      Введите сметану и соль и тщательно
      перемешайте, чтобы не осталось комочков.</b>


    <h2>С творогом:</h2>

    <h3> Ингредиенты:</h3>
    <ol>
      <li>2 варёных желтка; </li>
      <li>3–4 столовые ложки мягкого творога; </li>
      <li>3 столовые ложки кефира жирностью 2,5%; </li>
      <li>1–2 чайные ложки лимонного сока; </li>
      <li>соль — по вкусу; </li>
      <li>молотый чёрный перец — по вкусу; </li>
      <li>1 чайная ложка столовой горчицы. </li>
    </ol>

    <h3>Приготовление:</h3>

    <b>Хорошенько разомните вилкой желтки.<br>
      Погружным блендером смешайте их с творогом, кефиром, лимонным соком, солью и
      перцем.<br>

      Когда масса станет однородной, добавьте горчицу и взбейте ещё раз.</b>



    <h2> С рассолом:</h2>

    <h3> Ингредиенты:</h3>
    <ol>
      <li>2 сырых яичных желтка; </li>
      <li> 1 чайная ложка дижонской горчицы; </li>
      <li> 450 мл растительного масла; </li>
      <li>5–6 столовых ложек огуречного рассола; </li>
      <li> 1 чайная ложка лимонного сока; </li>
      <li>соль — по вкусу. </li>
    </ol>

    <h3> Приготовление:</h3>

    <b>В высокой ёмкости взбивайте венчиком желтки пару минут.<br>
      Добавьте горчицу и мешайте ещё 1–2 минуты.<br>

      По столовой ложке вводите половину масла, каждый раз взбивая.<br>
      Добавьте столовую ложку рассола.<br>

      Таким же образом влейте остальное масло. Приправьте рассолом, лимонным соком и солью.
    </b>



    <h1>Кетчуп</h1>

    <h2> Классический домашний кетчуп:</h2>
    <h3> Ингредиенты:</h3>
    <ol>
      <li> 5 кг спелых помидоров; </li>
      <li>1 кг репчатого лука; </li>
      <li>250 г сахара; </li>
      <li> 2 столовые ложки соли; </li>
      <li> 1 чайная ложка молотой корицы; </li>
      <li> 1 чайная ложка молотого чёрного перца; </li>
      <li> 1 чайная ложка паприки или молотого красного перца; </li>
      <li> 1 чайная ложка молотой гвоздики; </li>
      <li> 50 мл уксуса 9% — опционально. </li>
    </ol>

    <h3> Приготовление:</h3>

    <b> Нарежьте помидоры крупными дольками, удалив сердцевину.<br>
      Выложите в кастрюлю и поставьте на слабый огонь.<br>
      Если через
      10–15 минут помидоры не дали сок, влейте немного воды.<br>
      Перемешайте и тушите овощи на среднем огне ещё 40–50 минут.<br>

      Добавьте крупно нарезанный лук, доведите до кипения и варите на слабом огне ещё 1,5–2 часа.<br>
      Всё это время масса
      должна немного бурлить.<br>

      Снимите кастрюлю с огня.<br>
      Добавьте сахар, соль, корицу, чёрный перец, паприку или красный перец и гвоздику.<br>

      Перемешайте и измельчите массу блендером до однородной консистенции.<br>
      После этого можно процедить кетчуп через сито,
      если вы хотите избавиться от семечек помидоров.<br>

      Снова поставьте кастрюлю на плиту, доведите до кипения и готовьте ещё 1,5–2 часа. <br>
      За это время кетчуп загустеет.<br> За
      10 минут до окончания варки влейте в кастрюлю уксус и перемешайте.<br>
    </b>



    <h2>Кетчуп с болгарским перцем:</h2>

    <h3>Ингредиенты:</h3>

    <ol>
      <li> 3 кг спелых помидоров; </li>
      <li> 600 г болгарского перца; </li>
      <li>500 г репчатого лука; </li>
      <li> ½ головки чеснока; </li>
      <li> 1 столовая ложка соли; </li>
      <li> ½ чайной ложки молотой корицы; </li>
      <li> 12 горошин чёрного перца; </li>
      <li> 3 горошины душистого перца; </li>
      <li> 4 гвоздики; </li>
      <li> ½ чайной ложки молотого мускатного ореха; </li>
      <li> 100 мл уксуса 9% — опционально; </li>
      <li> 150 г сахара. </li>
    </ol>

    <h3>Приготовление:</h3>

    <b> Нарежьте очищенные помидоры, перец, лук и чеснок крупными дольками.<br>
      Выложите овощи в кастрюлю и добавьте соль.<br>
      Варите под крышкой на умеренном огне около 3 часов, периодически помешивая.<br>
      За это время масса уменьшится в 2–3
      раза.<br>

      Снимите кастрюлю с огня и измельчите томатную массу блендером до однородной консистенции.<br>
      В ступке или в кофемолке
      измельчите корицу, чёрный и душистый перец, гвоздику и мускатный орех.<br>

      Добавьте в кастрюлю смесь специй, уксус и сахар и перемешайте.<br>
      Поставьте кетчуп на средний огонь и варите ещё
      полчаса.</b>


]]></string>

<!--Рыба-->
    <string name="your_large_text_with_recipe_2"><![CDATA[


    рыба1111111111111111111111111111111111111111111111111111111111111111111111

    ]]></string>


<!-- Мясо   -->

    <string name="your_large_text_with_recipe_3"><![CDATA[


    мясо1111111111111111111111111111111111111111111111111111111111111111111111

    ]]></string>





    <!-- Заготовки на зиму   -->

<string name="your_large_text_with_recipe_4"><![CDATA[


    Заготовки на зиму1111111111111111111111111111111111111111111111111111111111111111111111

    ]]></string>



    </resources>


